Changes from merging in main, fixing conflicts and new build issues